--- a/src/style.css
+++ b/src/style.css
@@ -10,14 +10,33 @@
     text-align: center;
 }
 
-.button+.button {
-    margin-left: 10px;
+.taskbutton {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
 }
 
-#googlelogin {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 200px;
-    height: 100px;
+.wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+}
+
+.text {
+    padding-right: 5px;
 }
