--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,12 @@
+body {
+    font-family: 'メイリオ', Meiryo, '游ゴシック', YuGothic, 'ヒラギノ角ゴシック', 'Hiragino Kaku Gothic ProN', 'Noto Sans JP', sans-serif;
+}
+
 .flex-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    max-width: 800px;
 }
 
 h1 {
@@ -64,6 +69,7 @@ h4 {
     display: flex;
     flex-direction: column;
     width: 93%;
+    max-width: 800px;
 }
 
 .itemwrapper {
