--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,44 @@ h4 {
     height: 20px;
 }
 
+.dateWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+input[type="date"] {
+    display: inline-block;
+    vertical-align: middle;
+    /* 背景色 */
+    background-color: white;
+    /* フォントサイズ */
+    font-size: 16px;
+    /* 枠線のスタイル */
+    border-style: solid;
+    /* 枠線の太さ */
+    border-width: 1px;
+    /* 枠線の色 */
+    border-color: gray;
+    /* カーソルのスタイル */
+    cursor: pointer;
+    /* テキストの配置 */
+    text-align: center;
+    /* スパン要素のスタイル */
+    color: black;
+    /* アイコンの位置 */
+    padding-right: 20px;
+    /* アイコンの画像 */
+    /* background-image: url(カレンダー画像のURL); */
+    background-repeat: no-repeat;
+    background-position: right center;
+    /* アイコンのサイズ */
+    background-size: 16px 16px;
+    /* アイコンとテキストの間隔 */
+    margin-right: 20px;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -176,7 +214,7 @@ h4 {
     text-align: center;
 }
 
-#productinfo{
+#productinfo {
     font-style: italic;
     font-size: small;
 }
