--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,18 @@ h4 {
     text-align: center;
 }
 
+.button-disabled {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: grey;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+}
+
 
 .taskbutton,
 .taskeditbutton {
