--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,38 @@ h4 {
     height: 42px;
 }
 
+.editbutton {
+    float: left;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    /* width: 64px; */
+    height: 42px;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.deletebutton {
+    float: right;
+    padding: 10px 20px;
+    background-color: red;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    /* width: 64px; */
+    height: 42px;
+}
+
 .taskbutton-disabled {
     display: inline-block;
     padding: 10px 20px;
