--- a/src/style.css
+++ b/src/style.css
@@ -268,6 +268,10 @@ input[type="date"] {
     text-align: center;
 }
 
+.settings_list {
+    list-style: none;
+}
+
 #productinfo {
     font-style: italic;
     font-size: small;
