--- a/src/style.css
+++ b/src/style.css
@@ -225,6 +225,17 @@ input[type="date"] {
     align-items: center;
 }
 
+.itemeditinputname {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.itemeditinputaction {
+    width: 100%;
+    height: 4.5em;
+    box-sizing: border-box;
+}
+
 .text {
     padding-right: 5px;
     padding-left: 5px;
