--- a/src/style.css
+++ b/src/style.css
@@ -84,6 +84,18 @@ h4 {
     text-align: right;
 }
 
+.showitemhistorybutton {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+}
+
 .deletebutton {
     float: right;
     padding: 10px 20px;
@@ -286,4 +298,14 @@ input[type="date"] {
 #productinfo {
     font-style: italic;
     font-size: small;
+}
+
+.historydiv {
+    background: darkgray;
+}
+
+.historyentry {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
