--- a/src/style.css
+++ b/src/style.css
@@ -121,7 +121,7 @@ h4 {
     cursor: pointer;
     text-align: center;
     /* width: 64px; */
-    height: 42px;
+    /* height: 42px; */
 }
 
 .taskbutton-disabled {
@@ -302,6 +302,9 @@ input[type="date"] {
 
 .historydiv {
     background: darkgray;
+    margin-top: 6px;
+    margin-bottom: 2px;
+    border-radius: 4px;
 }
 
 .historyentry {
