--- a/src/style.css
+++ b/src/style.css
@@ -67,7 +67,19 @@ h4 {
 }
 
 .editbutton {
-    float: left;
+    /* float: left; */
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    /* width: 64px; */
+    height: 42px;
+}
+.addafterthisbutton {
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
