Place 'addtaskafterthis' button on center
And set busy cursor while processing 'AddTaskAfterThis'

--- a/src/style.css
+++ b/src/style.css
@@ -79,6 +79,11 @@ h4 {
     /* width: 64px; */
     height: 42px;
 }
+.addafterthisdiv{
+    display: flex;
+    justify-content: center;  /* 水平方向の中央揃え */
+    align-items: center;      /* 垂直方向の中央揃え */
+}
 .addafterthisbutton {
     padding: 10px 20px;
     background-color: #007bff;
